--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.slg.android.listenbook" >
+    package="com.slg.android.listenbook">
+
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -11,11 +12,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".biz.home.MainActivity"
-            android:label="@string/title_activity_main" >
-
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".biz.home.bookcity.BookCityActivity"
+            android:name=".biz.bookcity.BookCityActivity"
             android:label="@string/title_activity_book_city" >
 
         </activity>
@@ -31,6 +31,19 @@
             android:name=".biz.home.BaseActivity"
             android:label="@string/title_activity_base" >
         </activity>
+
+        <service
+            android:name=".biz.player.service.PlayerService"
+            android:enabled="true"
+            android:exported="false">
+        </service>
+
+        <receiver
+            android:name=".biz.player.receiver.PlayerReceiver"
+            android:enabled="true"
+            android:exported="true">
+
+        </receiver>
     </application>
 
 </manifest>
